syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.graphoenix.core.dto.objectType.grpc";

package io.graphoenix.core;

import "io/graphoenix/core/enums.proto";
import "google/protobuf/timestamp.proto";

message Meta {
    bool is_deprecated = 1;
    int32 version = 2;
    int32 realm_id = 3;
    string create_user_id = 4;
    google.protobuf.Timestamp create_time = 5;
    string update_user_id = 6;
    google.protobuf.Timestamp update_time = 7;
    string create_group_id = 8;
}