syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.graphoenix.introspection.grpc";

package io.graphoenix.introspection;

import "io/graphoenix/introspection/enums.proto";
import "io/graphoenix/introspection/objects.proto";
import "io/graphoenix/introspection/interfaces.proto";
import "io/graphoenix/introspection/input_objects.proto";
import "io/graphoenix/core/enums.proto";
import "io/graphoenix/core/input_objects.proto";

message QueryIntroSchemaRequest {
    optional string selection_set = 1;
    optional string arguments = 2;
    io.graphoenix.core.StringExpression id = 3;
    IntroTypeExpression types = 4;
    IntroTypeExpression query_type = 5;
    IntroTypeExpression mutation_type = 6;
    IntroTypeExpression subscription_type = 7;
    IntroDirectiveExpression directives = 8;
    bool include_deprecated = 9;
    io.graphoenix.core.IntExpression version = 10;
    io.graphoenix.core.IntExpression realm_id = 11;
    io.graphoenix.core.StringExpression create_user_id = 12;
    io.graphoenix.core.StringExpression create_time = 13;
    io.graphoenix.core.StringExpression update_user_id = 14;
    io.graphoenix.core.StringExpression update_time = 15;
    io.graphoenix.core.StringExpression create_group_id = 16;
    io.graphoenix.core.StringExpression intro_typename = 17;
    io.graphoenix.core.StringExpression query_type_name = 18;
    io.graphoenix.core.StringExpression mutation_type_name = 19;
    io.graphoenix.core.StringExpression subscription_type_name = 20;
    repeated string group_by = 21;
    bool not = 22;
    io.graphoenix.core.Conditional cond = 23;
    repeated IntroSchemaExpression exs = 24;
}
message QueryIntroSchemaListRequest {
    optional string selection_set = 1;
    optional string arguments = 2;
    io.graphoenix.core.StringExpression id = 3;
    IntroTypeExpression types = 4;
    IntroTypeExpression query_type = 5;
    IntroTypeExpression mutation_type = 6;
    IntroTypeExpression subscription_type = 7;
    IntroDirectiveExpression directives = 8;
    bool include_deprecated = 9;
    io.graphoenix.core.IntExpression version = 10;
    io.graphoenix.core.IntExpression realm_id = 11;
    io.graphoenix.core.StringExpression create_user_id = 12;
    io.graphoenix.core.StringExpression create_time = 13;
    io.graphoenix.core.StringExpression update_user_id = 14;
    io.graphoenix.core.StringExpression update_time = 15;
    io.graphoenix.core.StringExpression create_group_id = 16;
    io.graphoenix.core.StringExpression intro_typename = 17;
    io.graphoenix.core.StringExpression query_type_name = 18;
    io.graphoenix.core.StringExpression mutation_type_name = 19;
    io.graphoenix.core.StringExpression subscription_type_name = 20;
    IntroSchemaOrderBy order_by = 21;
    repeated string group_by = 22;
    bool not = 23;
    io.graphoenix.core.Conditional cond = 24;
    repeated IntroSchemaExpression exs = 25;
    int32 first = 26;
    int32 last = 27;
    int32 offset = 28;
    string after = 29;
    string before = 30;
}
message QueryIntroSchemaConnectionRequest {
    optional string selection_set = 1;
    optional string arguments = 2;
    io.graphoenix.core.StringExpression id = 3;
    IntroTypeExpression types = 4;
    IntroTypeExpression query_type = 5;
    IntroTypeExpression mutation_type = 6;
    IntroTypeExpression subscription_type = 7;
    IntroDirectiveExpression directives = 8;
    bool include_deprecated = 9;
    io.graphoenix.core.IntExpression version = 10;
    io.graphoenix.core.IntExpression realm_id = 11;
    io.graphoenix.core.StringExpression create_user_id = 12;
    io.graphoenix.core.StringExpression create_time = 13;
    io.graphoenix.core.StringExpression update_user_id = 14;
    io.graphoenix.core.StringExpression update_time = 15;
    io.graphoenix.core.StringExpression create_group_id = 16;
    io.graphoenix.core.StringExpression intro_typename = 17;
    io.graphoenix.core.StringExpression query_type_name = 18;
    io.graphoenix.core.StringExpression mutation_type_name = 19;
    io.graphoenix.core.StringExpression subscription_type_name = 20;
    IntroSchemaOrderBy order_by = 21;
    repeated string group_by = 22;
    bool not = 23;
    io.graphoenix.core.Conditional cond = 24;
    repeated IntroSchemaExpression exs = 25;
    int32 first = 26;
    int32 last = 27;
    int32 offset = 28;
}
message QueryIntroTypeRequest {
    optional string selection_set = 1;
    optional string arguments = 2;
    io.graphoenix.core.StringExpression name = 3;
    IntroSchemaExpression of_schema = 4;
    io.graphoenix.core.IntroTypeKindExpression kind = 5;
    io.graphoenix.core.StringExpression description = 6;
    IntroFieldExpression fields = 7;
    IntroTypeExpression interfaces = 8;
    IntroTypeExpression possible_types = 9;
    IntroEnumValueExpression enum_values = 10;
    IntroInputValueExpression input_fields = 11;
    IntroTypeExpression of_type = 12;
    bool include_deprecated = 13;
    io.graphoenix.core.IntExpression version = 14;
    io.graphoenix.core.IntExpression realm_id = 15;
    io.graphoenix.core.StringExpression create_user_id = 16;
    io.graphoenix.core.StringExpression create_time = 17;
    io.graphoenix.core.StringExpression update_user_id = 18;
    io.graphoenix.core.StringExpression update_time = 19;
    io.graphoenix.core.StringExpression create_group_id = 20;
    io.graphoenix.core.StringExpression intro_typename = 21;
    io.graphoenix.core.IntExpression schema_id = 22;
    io.graphoenix.core.StringExpression of_type_name = 23;
    IntroType__TypeRelationExpression intro_type_type_relation = 24;
    repeated string group_by = 25;
    bool not = 26;
    io.graphoenix.core.Conditional cond = 27;
    repeated IntroTypeExpression exs = 28;
}
message QueryIntroTypeListRequest {
    optional string selection_set = 1;
    optional string arguments = 2;
    io.graphoenix.core.StringExpression name = 3;
    IntroSchemaExpression of_schema = 4;
    io.graphoenix.core.IntroTypeKindExpression kind = 5;
    io.graphoenix.core.StringExpression description = 6;
    IntroFieldExpression fields = 7;
    IntroTypeExpression interfaces = 8;
    IntroTypeExpression possible_types = 9;
    IntroEnumValueExpression enum_values = 10;
    IntroInputValueExpression input_fields = 11;
    IntroTypeExpression of_type = 12;
    bool include_deprecated = 13;
    io.graphoenix.core.IntExpression version = 14;
    io.graphoenix.core.IntExpression realm_id = 15;
    io.graphoenix.core.StringExpression create_user_id = 16;
    io.graphoenix.core.StringExpression create_time = 17;
    io.graphoenix.core.StringExpression update_user_id = 18;
    io.graphoenix.core.StringExpression update_time = 19;
    io.graphoenix.core.StringExpression create_group_id = 20;
    io.graphoenix.core.StringExpression intro_typename = 21;
    io.graphoenix.core.IntExpression schema_id = 22;
    io.graphoenix.core.StringExpression of_type_name = 23;
    IntroType__TypeRelationExpression intro_type_type_relation = 24;
    IntroTypeOrderBy order_by = 25;
    repeated string group_by = 26;
    bool not = 27;
    io.graphoenix.core.Conditional cond = 28;
    repeated IntroTypeExpression exs = 29;
    int32 first = 30;
    int32 last = 31;
    int32 offset = 32;
    string after = 33;
    string before = 34;
}
message QueryIntroTypeConnectionRequest {
    optional string selection_set = 1;
    optional string arguments = 2;
    io.graphoenix.core.StringExpression name = 3;
    IntroSchemaExpression of_schema = 4;
    io.graphoenix.core.IntroTypeKindExpression kind = 5;
    io.graphoenix.core.StringExpression description = 6;
    IntroFieldExpression fields = 7;
    IntroTypeExpression interfaces = 8;
    IntroTypeExpression possible_types = 9;
    IntroEnumValueExpression enum_values = 10;
    IntroInputValueExpression input_fields = 11;
    IntroTypeExpression of_type = 12;
    bool include_deprecated = 13;
    io.graphoenix.core.IntExpression version = 14;
    io.graphoenix.core.IntExpression realm_id = 15;
    io.graphoenix.core.StringExpression create_user_id = 16;
    io.graphoenix.core.StringExpression create_time = 17;
    io.graphoenix.core.StringExpression update_user_id = 18;
    io.graphoenix.core.StringExpression update_time = 19;
    io.graphoenix.core.StringExpression create_group_id = 20;
    io.graphoenix.core.StringExpression intro_typename = 21;
    io.graphoenix.core.IntExpression schema_id = 22;
    io.graphoenix.core.StringExpression of_type_name = 23;
    IntroType__TypeRelationExpression intro_type_type_relation = 24;
    IntroTypeOrderBy order_by = 25;
    repeated string group_by = 26;
    bool not = 27;
    io.graphoenix.core.Conditional cond = 28;
    repeated IntroTypeExpression exs = 29;
    int32 first = 30;
    int32 last = 31;
    int32 offset = 32;
}
message QueryIntroFieldRequest {
    optional string selection_set = 1;
    optional string arguments = 2;
    io.graphoenix.core.StringExpression id = 3;
    io.graphoenix.core.StringExpression name = 4;
    IntroTypeExpression of_type = 5;
    io.graphoenix.core.StringExpression description = 6;
    IntroInputValueExpression args = 7;
    IntroTypeExpression type = 8;
    io.graphoenix.core.StringExpression deprecation_reason = 9;
    bool include_deprecated = 10;
    io.graphoenix.core.IntExpression version = 11;
    io.graphoenix.core.IntExpression realm_id = 12;
    io.graphoenix.core.StringExpression create_user_id = 13;
    io.graphoenix.core.StringExpression create_time = 14;
    io.graphoenix.core.StringExpression update_user_id = 15;
    io.graphoenix.core.StringExpression update_time = 16;
    io.graphoenix.core.StringExpression create_group_id = 17;
    io.graphoenix.core.StringExpression intro_typename = 18;
    io.graphoenix.core.StringExpression of_type_name = 19;
    io.graphoenix.core.StringExpression type_name = 20;
    repeated string group_by = 21;
    bool not = 22;
    io.graphoenix.core.Conditional cond = 23;
    repeated IntroFieldExpression exs = 24;
}
message QueryIntroFieldListRequest {
    optional string selection_set = 1;
    optional string arguments = 2;
    io.graphoenix.core.StringExpression id = 3;
    io.graphoenix.core.StringExpression name = 4;
    IntroTypeExpression of_type = 5;
    io.graphoenix.core.StringExpression description = 6;
    IntroInputValueExpression args = 7;
    IntroTypeExpression type = 8;
    io.graphoenix.core.StringExpression deprecation_reason = 9;
    bool include_deprecated = 10;
    io.graphoenix.core.IntExpression version = 11;
    io.graphoenix.core.IntExpression realm_id = 12;
    io.graphoenix.core.StringExpression create_user_id = 13;
    io.graphoenix.core.StringExpression create_time = 14;
    io.graphoenix.core.StringExpression update_user_id = 15;
    io.graphoenix.core.StringExpression update_time = 16;
    io.graphoenix.core.StringExpression create_group_id = 17;
    io.graphoenix.core.StringExpression intro_typename = 18;
    io.graphoenix.core.StringExpression of_type_name = 19;
    io.graphoenix.core.StringExpression type_name = 20;
    IntroFieldOrderBy order_by = 21;
    repeated string group_by = 22;
    bool not = 23;
    io.graphoenix.core.Conditional cond = 24;
    repeated IntroFieldExpression exs = 25;
    int32 first = 26;
    int32 last = 27;
    int32 offset = 28;
    string after = 29;
    string before = 30;
}
message QueryIntroFieldConnectionRequest {
    optional string selection_set = 1;
    optional string arguments = 2;
    io.graphoenix.core.StringExpression id = 3;
    io.graphoenix.core.StringExpression name = 4;
    IntroTypeExpression of_type = 5;
    io.graphoenix.core.StringExpression description = 6;
    IntroInputValueExpression args = 7;
    IntroTypeExpression type = 8;
    io.graphoenix.core.StringExpression deprecation_reason = 9;
    bool include_deprecated = 10;
    io.graphoenix.core.IntExpression version = 11;
    io.graphoenix.core.IntExpression realm_id = 12;
    io.graphoenix.core.StringExpression create_user_id = 13;
    io.graphoenix.core.StringExpression create_time = 14;
    io.graphoenix.core.StringExpression update_user_id = 15;
    io.graphoenix.core.StringExpression update_time = 16;
    io.graphoenix.core.StringExpression create_group_id = 17;
    io.graphoenix.core.StringExpression intro_typename = 18;
    io.graphoenix.core.StringExpression of_type_name = 19;
    io.graphoenix.core.StringExpression type_name = 20;
    IntroFieldOrderBy order_by = 21;
    repeated string group_by = 22;
    bool not = 23;
    io.graphoenix.core.Conditional cond = 24;
    repeated IntroFieldExpression exs = 25;
    int32 first = 26;
    int32 last = 27;
    int32 offset = 28;
}
message QueryIntroInputValueRequest {
    optional string selection_set = 1;
    optional string arguments = 2;
    io.graphoenix.core.StringExpression id = 3;
    io.graphoenix.core.StringExpression name = 4;
    IntroTypeExpression of_type = 5;
    io.graphoenix.core.IntExpression field_id = 6;
    io.graphoenix.core.StringExpression directive_name = 7;
    io.graphoenix.core.StringExpression description = 8;
    IntroTypeExpression type = 9;
    io.graphoenix.core.StringExpression default_value = 10;
    bool include_deprecated = 11;
    io.graphoenix.core.IntExpression version = 12;
    io.graphoenix.core.IntExpression realm_id = 13;
    io.graphoenix.core.StringExpression create_user_id = 14;
    io.graphoenix.core.StringExpression create_time = 15;
    io.graphoenix.core.StringExpression update_user_id = 16;
    io.graphoenix.core.StringExpression update_time = 17;
    io.graphoenix.core.StringExpression create_group_id = 18;
    io.graphoenix.core.StringExpression intro_typename = 19;
    io.graphoenix.core.StringExpression of_type_name = 20;
    io.graphoenix.core.StringExpression type_name = 21;
    repeated string group_by = 22;
    bool not = 23;
    io.graphoenix.core.Conditional cond = 24;
    repeated IntroInputValueExpression exs = 25;
}
message QueryIntroInputValueListRequest {
    optional string selection_set = 1;
    optional string arguments = 2;
    io.graphoenix.core.StringExpression id = 3;
    io.graphoenix.core.StringExpression name = 4;
    IntroTypeExpression of_type = 5;
    io.graphoenix.core.IntExpression field_id = 6;
    io.graphoenix.core.StringExpression directive_name = 7;
    io.graphoenix.core.StringExpression description = 8;
    IntroTypeExpression type = 9;
    io.graphoenix.core.StringExpression default_value = 10;
    bool include_deprecated = 11;
    io.graphoenix.core.IntExpression version = 12;
    io.graphoenix.core.IntExpression realm_id = 13;
    io.graphoenix.core.StringExpression create_user_id = 14;
    io.graphoenix.core.StringExpression create_time = 15;
    io.graphoenix.core.StringExpression update_user_id = 16;
    io.graphoenix.core.StringExpression update_time = 17;
    io.graphoenix.core.StringExpression create_group_id = 18;
    io.graphoenix.core.StringExpression intro_typename = 19;
    io.graphoenix.core.StringExpression of_type_name = 20;
    io.graphoenix.core.StringExpression type_name = 21;
    IntroInputValueOrderBy order_by = 22;
    repeated string group_by = 23;
    bool not = 24;
    io.graphoenix.core.Conditional cond = 25;
    repeated IntroInputValueExpression exs = 26;
    int32 first = 27;
    int32 last = 28;
    int32 offset = 29;
    string after = 30;
    string before = 31;
}
message QueryIntroInputValueConnectionRequest {
    optional string selection_set = 1;
    optional string arguments = 2;
    io.graphoenix.core.StringExpression id = 3;
    io.graphoenix.core.StringExpression name = 4;
    IntroTypeExpression of_type = 5;
    io.graphoenix.core.IntExpression field_id = 6;
    io.graphoenix.core.StringExpression directive_name = 7;
    io.graphoenix.core.StringExpression description = 8;
    IntroTypeExpression type = 9;
    io.graphoenix.core.StringExpression default_value = 10;
    bool include_deprecated = 11;
    io.graphoenix.core.IntExpression version = 12;
    io.graphoenix.core.IntExpression realm_id = 13;
    io.graphoenix.core.StringExpression create_user_id = 14;
    io.graphoenix.core.StringExpression create_time = 15;
    io.graphoenix.core.StringExpression update_user_id = 16;
    io.graphoenix.core.StringExpression update_time = 17;
    io.graphoenix.core.StringExpression create_group_id = 18;
    io.graphoenix.core.StringExpression intro_typename = 19;
    io.graphoenix.core.StringExpression of_type_name = 20;
    io.graphoenix.core.StringExpression type_name = 21;
    IntroInputValueOrderBy order_by = 22;
    repeated string group_by = 23;
    bool not = 24;
    io.graphoenix.core.Conditional cond = 25;
    repeated IntroInputValueExpression exs = 26;
    int32 first = 27;
    int32 last = 28;
    int32 offset = 29;
}
message QueryIntroEnumValueRequest {
    optional string selection_set = 1;
    optional string arguments = 2;
    io.graphoenix.core.StringExpression id = 3;
    io.graphoenix.core.StringExpression name = 4;
    IntroTypeExpression of_type = 5;
    io.graphoenix.core.StringExpression description = 6;
    io.graphoenix.core.StringExpression deprecation_reason = 7;
    bool include_deprecated = 8;
    io.graphoenix.core.IntExpression version = 9;
    io.graphoenix.core.IntExpression realm_id = 10;
    io.graphoenix.core.StringExpression create_user_id = 11;
    io.graphoenix.core.StringExpression create_time = 12;
    io.graphoenix.core.StringExpression update_user_id = 13;
    io.graphoenix.core.StringExpression update_time = 14;
    io.graphoenix.core.StringExpression create_group_id = 15;
    io.graphoenix.core.StringExpression intro_typename = 16;
    io.graphoenix.core.StringExpression of_type_name = 17;
    repeated string group_by = 18;
    bool not = 19;
    io.graphoenix.core.Conditional cond = 20;
    repeated IntroEnumValueExpression exs = 21;
}
message QueryIntroEnumValueListRequest {
    optional string selection_set = 1;
    optional string arguments = 2;
    io.graphoenix.core.StringExpression id = 3;
    io.graphoenix.core.StringExpression name = 4;
    IntroTypeExpression of_type = 5;
    io.graphoenix.core.StringExpression description = 6;
    io.graphoenix.core.StringExpression deprecation_reason = 7;
    bool include_deprecated = 8;
    io.graphoenix.core.IntExpression version = 9;
    io.graphoenix.core.IntExpression realm_id = 10;
    io.graphoenix.core.StringExpression create_user_id = 11;
    io.graphoenix.core.StringExpression create_time = 12;
    io.graphoenix.core.StringExpression update_user_id = 13;
    io.graphoenix.core.StringExpression update_time = 14;
    io.graphoenix.core.StringExpression create_group_id = 15;
    io.graphoenix.core.StringExpression intro_typename = 16;
    io.graphoenix.core.StringExpression of_type_name = 17;
    IntroEnumValueOrderBy order_by = 18;
    repeated string group_by = 19;
    bool not = 20;
    io.graphoenix.core.Conditional cond = 21;
    repeated IntroEnumValueExpression exs = 22;
    int32 first = 23;
    int32 last = 24;
    int32 offset = 25;
    string after = 26;
    string before = 27;
}
message QueryIntroEnumValueConnectionRequest {
    optional string selection_set = 1;
    optional string arguments = 2;
    io.graphoenix.core.StringExpression id = 3;
    io.graphoenix.core.StringExpression name = 4;
    IntroTypeExpression of_type = 5;
    io.graphoenix.core.StringExpression description = 6;
    io.graphoenix.core.StringExpression deprecation_reason = 7;
    bool include_deprecated = 8;
    io.graphoenix.core.IntExpression version = 9;
    io.graphoenix.core.IntExpression realm_id = 10;
    io.graphoenix.core.StringExpression create_user_id = 11;
    io.graphoenix.core.StringExpression create_time = 12;
    io.graphoenix.core.StringExpression update_user_id = 13;
    io.graphoenix.core.StringExpression update_time = 14;
    io.graphoenix.core.StringExpression create_group_id = 15;
    io.graphoenix.core.StringExpression intro_typename = 16;
    io.graphoenix.core.StringExpression of_type_name = 17;
    IntroEnumValueOrderBy order_by = 18;
    repeated string group_by = 19;
    bool not = 20;
    io.graphoenix.core.Conditional cond = 21;
    repeated IntroEnumValueExpression exs = 22;
    int32 first = 23;
    int32 last = 24;
    int32 offset = 25;
}
message QueryIntroDirectiveRequest {
    optional string selection_set = 1;
    optional string arguments = 2;
    io.graphoenix.core.StringExpression name = 3;
    IntroSchemaExpression of_schema = 4;
    io.graphoenix.core.StringExpression description = 5;
    io.graphoenix.core.IntroDirectiveLocationExpression locations = 6;
    IntroInputValueExpression args = 7;
    io.graphoenix.core.BooleanExpression is_repeatable = 8;
    bool include_deprecated = 9;
    io.graphoenix.core.IntExpression version = 10;
    io.graphoenix.core.IntExpression realm_id = 11;
    io.graphoenix.core.StringExpression create_user_id = 12;
    io.graphoenix.core.StringExpression create_time = 13;
    io.graphoenix.core.StringExpression update_user_id = 14;
    io.graphoenix.core.StringExpression update_time = 15;
    io.graphoenix.core.StringExpression create_group_id = 16;
    io.graphoenix.core.StringExpression intro_typename = 17;
    io.graphoenix.core.IntExpression schema_id = 18;
    repeated string group_by = 19;
    bool not = 20;
    io.graphoenix.core.Conditional cond = 21;
    repeated IntroDirectiveExpression exs = 22;
}
message QueryIntroDirectiveListRequest {
    optional string selection_set = 1;
    optional string arguments = 2;
    io.graphoenix.core.StringExpression name = 3;
    IntroSchemaExpression of_schema = 4;
    io.graphoenix.core.StringExpression description = 5;
    io.graphoenix.core.IntroDirectiveLocationExpression locations = 6;
    IntroInputValueExpression args = 7;
    io.graphoenix.core.BooleanExpression is_repeatable = 8;
    bool include_deprecated = 9;
    io.graphoenix.core.IntExpression version = 10;
    io.graphoenix.core.IntExpression realm_id = 11;
    io.graphoenix.core.StringExpression create_user_id = 12;
    io.graphoenix.core.StringExpression create_time = 13;
    io.graphoenix.core.StringExpression update_user_id = 14;
    io.graphoenix.core.StringExpression update_time = 15;
    io.graphoenix.core.StringExpression create_group_id = 16;
    io.graphoenix.core.StringExpression intro_typename = 17;
    io.graphoenix.core.IntExpression schema_id = 18;
    IntroDirectiveOrderBy order_by = 19;
    repeated string group_by = 20;
    bool not = 21;
    io.graphoenix.core.Conditional cond = 22;
    repeated IntroDirectiveExpression exs = 23;
    int32 first = 24;
    int32 last = 25;
    int32 offset = 26;
    string after = 27;
    string before = 28;
}
message QueryIntroDirectiveConnectionRequest {
    optional string selection_set = 1;
    optional string arguments = 2;
    io.graphoenix.core.StringExpression name = 3;
    IntroSchemaExpression of_schema = 4;
    io.graphoenix.core.StringExpression description = 5;
    io.graphoenix.core.IntroDirectiveLocationExpression locations = 6;
    IntroInputValueExpression args = 7;
    io.graphoenix.core.BooleanExpression is_repeatable = 8;
    bool include_deprecated = 9;
    io.graphoenix.core.IntExpression version = 10;
    io.graphoenix.core.IntExpression realm_id = 11;
    io.graphoenix.core.StringExpression create_user_id = 12;
    io.graphoenix.core.StringExpression create_time = 13;
    io.graphoenix.core.StringExpression update_user_id = 14;
    io.graphoenix.core.StringExpression update_time = 15;
    io.graphoenix.core.StringExpression create_group_id = 16;
    io.graphoenix.core.StringExpression intro_typename = 17;
    io.graphoenix.core.IntExpression schema_id = 18;
    IntroDirectiveOrderBy order_by = 19;
    repeated string group_by = 20;
    bool not = 21;
    io.graphoenix.core.Conditional cond = 22;
    repeated IntroDirectiveExpression exs = 23;
    int32 first = 24;
    int32 last = 25;
    int32 offset = 26;
}
message QueryIntroTypeTypeRelationRequest {
    optional string selection_set = 1;
    optional string arguments = 2;
    io.graphoenix.core.StringExpression id = 3;
    io.graphoenix.core.StringExpression intro_type_ref = 4;
    IntroTypeExpression intro_type = 5;
    bool include_deprecated = 6;
    io.graphoenix.core.IntExpression version = 7;
    io.graphoenix.core.IntExpression realm_id = 8;
    io.graphoenix.core.StringExpression create_user_id = 9;
    io.graphoenix.core.StringExpression create_time = 10;
    io.graphoenix.core.StringExpression update_user_id = 11;
    io.graphoenix.core.StringExpression update_time = 12;
    io.graphoenix.core.StringExpression create_group_id = 13;
    io.graphoenix.core.StringExpression intro_typename = 14;
    repeated string group_by = 15;
    bool not = 16;
    io.graphoenix.core.Conditional cond = 17;
    repeated IntroType__TypeRelationExpression exs = 18;
}
message QueryIntroTypeTypeRelationListRequest {
    optional string selection_set = 1;
    optional string arguments = 2;
    io.graphoenix.core.StringExpression id = 3;
    io.graphoenix.core.StringExpression intro_type_ref = 4;
    IntroTypeExpression intro_type = 5;
    bool include_deprecated = 6;
    io.graphoenix.core.IntExpression version = 7;
    io.graphoenix.core.IntExpression realm_id = 8;
    io.graphoenix.core.StringExpression create_user_id = 9;
    io.graphoenix.core.StringExpression create_time = 10;
    io.graphoenix.core.StringExpression update_user_id = 11;
    io.graphoenix.core.StringExpression update_time = 12;
    io.graphoenix.core.StringExpression create_group_id = 13;
    io.graphoenix.core.StringExpression intro_typename = 14;
    IntroType__TypeRelationOrderBy order_by = 15;
    repeated string group_by = 16;
    bool not = 17;
    io.graphoenix.core.Conditional cond = 18;
    repeated IntroType__TypeRelationExpression exs = 19;
    int32 first = 20;
    int32 last = 21;
    int32 offset = 22;
    string after = 23;
    string before = 24;
}
message QueryIntroTypeTypeRelationConnectionRequest {
    optional string selection_set = 1;
    optional string arguments = 2;
    io.graphoenix.core.StringExpression id = 3;
    io.graphoenix.core.StringExpression intro_type_ref = 4;
    IntroTypeExpression intro_type = 5;
    bool include_deprecated = 6;
    io.graphoenix.core.IntExpression version = 7;
    io.graphoenix.core.IntExpression realm_id = 8;
    io.graphoenix.core.StringExpression create_user_id = 9;
    io.graphoenix.core.StringExpression create_time = 10;
    io.graphoenix.core.StringExpression update_user_id = 11;
    io.graphoenix.core.StringExpression update_time = 12;
    io.graphoenix.core.StringExpression create_group_id = 13;
    io.graphoenix.core.StringExpression intro_typename = 14;
    IntroType__TypeRelationOrderBy order_by = 15;
    repeated string group_by = 16;
    bool not = 17;
    io.graphoenix.core.Conditional cond = 18;
    repeated IntroType__TypeRelationExpression exs = 19;
    int32 first = 20;
    int32 last = 21;
    int32 offset = 22;
}