package io.graphoenix.spi.constant;

public class Hammurabi {

    public static final String TYPE_QUERY_NAME = "Query";
    public static final String TYPE_MUTATION_NAME = "Mutation";
    public static final String TYPE_SUBSCRIPTION_NAME = "Subscription";
    public static final String SCALA_ID_NAME = "ID";
    public static final String SCALA_INT_NAME = "Int";
    public static final String SCALA_FLOAT_NAME = "Float";
    public static final String SCALA_STRING_NAME = "String";
    public static final String SCALA_BOOLEAN_NAME = "Boolean";
    public static final String SCALA_BIG_INTEGER_NAME = "BigInteger";
    public static final String SCALA_BIG_DECIMAL_NAME = "BigDecimal";
    public static final String SCALA_DATE_NAME = "Date";
    public static final String SCALA_TIME_NAME = "Time";
    public static final String SCALA_DATE_TIME_NAME = "DateTime";
    public static final String SCALA_TIMESTAMP_NAME = "Timestamp";
    public static final String TYPE_PAGE_INFO_NAME = "PageInfo";
    public static final String INTERFACE_META_NAME = "Meta";
    public static final String FIELD_DEPRECATED_NAME = "isDeprecated";
    public static final String FIELD_TYPE_NAME_NAME = "__typename";
    public static final String INPUT_VALUE_DEPRECATED_NAME = "includeDeprecated";
    public static final String INPUT_VALUE_NOT_NAME = "not";
    public static final String INPUT_VALUE_LIST_NAME = "list";
    public static final String INPUT_VALUE_WHERE_NAME = "where";
    public static final String INPUT_VALUE_FIRST_NAME = "first";
    public static final String INPUT_VALUE_LAST_NAME = "last";
    public static final String INPUT_VALUE_OFFSET_NAME = "offset";
    public static final String INPUT_VALUE_AFTER_NAME = "after";
    public static final String INPUT_VALUE_BEFORE_NAME = "before";
    public static final String INPUT_VALUE_ORDER_BY_NAME = "orderBy";
    public static final String INPUT_VALUE_GROUP_BY_NAME = "groupBy";
    public static final String INPUT_SORT_NAME = "Sort";
    public static final String INPUT_VALUE_SORT_NAME = "sort";
    public static final String INPUT_OPERATOR_NAME = "Operator";
    public static final String INPUT_VALUE_OPERATOR_OPR_NAME = "opr";
    public static final String INPUT_VALUE_OPERATOR_OPR_EQ = "EQ";
    public static final String INPUT_VALUE_OPERATOR_VAL_NAME = "val";
    public static final String INPUT_VALUE_OPERATOR_ARR_NAME = "arr";
    public static final String[] INPUT_VALUE_EXCLUDE = {INPUT_VALUE_DEPRECATED_NAME, INPUT_VALUE_FIRST_NAME, INPUT_VALUE_LAST_NAME, INPUT_VALUE_OFFSET_NAME, INPUT_VALUE_AFTER_NAME, INPUT_VALUE_BEFORE_NAME, INPUT_VALUE_GROUP_BY_NAME, INPUT_VALUE_ORDER_BY_NAME, INPUT_VALUE_SORT_NAME, INPUT_VALUE_LIST_NAME, INPUT_VALUE_WHERE_NAME, INPUT_VALUE_NOT_NAME};
    public static final String DIRECTIVE_FUNC_NAME = "func";
    public static final String DIRECTIVE_FUNC_ARGUMENT_NAME_NAME = "name";
    public static final String DIRECTIVE_FUNC_ARGUMENT_FIELD_NAME = "field";
    public static final String DIRECTIVE_CURSOR_NAME = "cursor";
    public static final String DIRECTIVE_INVOKE_NAME = "invoke";
    public static final String DIRECTIVE_INVOKES_NAME = "invokes";
    public static final String DIRECTIVE_CONNECTION_NAME = "connection";
    public static final String DIRECTIVE_AGGREGATE_NAME = "aggregate";
    public static final String DIRECTIVE_MAP_NAME = "map";
    public static final String DIRECTIVE_ARGUMENT_WITH_NAME = "with";
    public static final String DIRECTIVE_DATA_TYPE_NAME = "dataType";
    public static final String DIRECTIVE_DATA_TYPE_TYPE_NAME = "type";
    public static final String DIRECTIVE_DATA_TYPE_DEFAULT_NAME = "default";
    public static final String DIRECTIVE_VALIDATION_NAME = "validation";
    public static final String DIRECTIVE_FETCH_NAME = "fetch";
    public static final String DIRECTIVE_CONTAINER_TYPE_NAME = "containerType";
    public static final String DIRECTIVE_PACKAGE_INFO_NAME = "packageInfo";
    public static final String DIRECTIVE_PACKAGE_INFO_PACKAGE_NAME_NAME = "packageName";
    public static final String DIRECTIVE_CLASS_INFO_NAME = "classInfo";
    public static final String DIRECTIVE_CLASS_INFO_CLASS_NAME_NAME = "className";
    public static final String DIRECTIVE_GRPC_PACKAGE_INFO_PACKAGE_NAME_NAME = "grpcPackageName";
    public static final String DIRECTIVE_GRPC_CLASS_INFO_CLASS_NAME_NAME = "grpcClassName";
    public static final String DIRECTIVE_MERGE_TO_LIST_NAME = "mergeToList";
    public static final String PREFIX_INTROSPECTION = "__";
    public static final String SUFFIX_INPUT = "Input";
    public static final String SUFFIX_ARGUMENTS = "Arguments";
    public static final String SUFFIX_ORDER_BY = "OrderBy";
    public static final String SUFFIX_LIST = "List";
    public static final String SUFFIX_CONNECTION = "Connection";
    public static final String SUFFIX_AGGREGATE = "Aggregate";
    public static final String SUFFIX_EDGE = "Edge";
    public static final String SUFFIX_EXPRESSION = "Expression";
    public static final String SUFFIX_COUNT = "Count";
    public static final String SUFFIX_SUM = "Sum";
    public static final String SUFFIX_AVG = "Avg";
    public static final String SUFFIX_MAX = "Max";
    public static final String SUFFIX_MIN = "Min";
}
